

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/box_detail_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/placeholder"
            android:src="@drawable/placeholder"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/box_detail_name"/>


        <TextView
            android:id="@+id/box_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            app:layout_constraintTop_toBottomOf="@id/box_detail_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buyAndOpenButton"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/buyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acheter_la_boite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buyAndOpenButton"/>

        <Button
            android:id="@+id/buyAndOpenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acheter_et_ouvrir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_detail_name"
            app:layout_constraintBottom_toTopOf="@+id/buyButton"/>

        <Button
            android:id="@+id/openButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ouvrir"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_detail_name"/>


        <ListView
            android:id="@+id/listViewItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="325dp"
            app:layout_constraintTop_toBottomOf="@+id/buyButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:nestedScrollingEnabled="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>
