<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventaire"
        android:textSize="25sp"
        android:layout_marginTop="2dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/boxes_title"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boites"
        android:layout_below="@id/btnLogout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/items_title"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:layout_below="@id/btnLogout"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_marginStart="10dp"
        />



    <ListView
        android:id="@+id/list_owned_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_material"
        android:layout_above="@id/bottom_navigation"/>

    <ListView
        android:id="@+id/list_owned_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_material"
        android:layout_above="@id/bottom_navigation"
        android:visibility="invisible"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@layout/bottom_nav_menu" />


</RelativeLayout>